--- a/arkfuture/html/conf.html
+++ b/arkfuture/html/conf.html
@@ -16,19 +16,19 @@
         <p>这个条目是我们的配置文件的连接</p>
         <p>请下载后修改成您的配置后使用</p>
         <p>同时也请您审阅我们的配置文件, 给我们提出修改建议</p>
-        <p>配置文件基于Debian最新版本的软件配置; 当前:12 bookworm</p>
+        <p>配置文件基于Debian最新版本的软件配置</p>
         <p>请单机下载</p>
 
         <div>
-            <h2>名称 支持的软件版本, 以 "!" 结尾的软件版本适配[Debian 稳定版]软件包最新版本</h2>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/i2p-tor/">i2pd & tor !</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/inspircd/">inspircd !</a><br>
+            <h2>名称 支持的软件版本</h2>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/i2p-tor/">i2pd & tor</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/inspircd/">inspircd</a><br>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/ergoircd/">ergoircd</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/hybridircd/">hybridircd !</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/ngircd/">ngircd [配置归档中,待软件包更新后解除]</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/irssi/">irssi !</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/suricata/">Suricata !</a><br>
-            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/minecraft/">minecraftServer !</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/hybridircd/">hybridircd</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/ngircd/">ngircd</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/irssi/">irssi</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/suricata/">Suricata</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/minecraft/">minecraftServer</a><br>
             <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/arkfuture/config/other/">other conf</a><br>
         </div>
 
