--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <!--<link rel="stylesheet" type="text/css" href="/css.css">-->
+    <link id="theme-css" rel="preload" href="theme.css" as="style" onload="this.rel='stylesheet'">
     <script src="/js.js" defer></script>
 </head>
 
