--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
 
     <div>
-        <h1 class="tit">关于 | About</h1>
+        <h1 class="title">关于 | About</h1>
         <div>
-            <h2>公约 | CONVENTION</h2>
+            <h2 class="title2">公约 | CONVENTION</h2>
             <p>您需阅读我们的<a href="/arkfuture/md/arkfuture.md" width="%" height="150" frameborder="0">公约</a>及<a href="/arkfuture/md/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a>以了解我们</p>
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <p>也欢迎加入我们的聊天室进行交流讨论</p>
@@ -42,9 +42,9 @@
     <hr>
 
     <div>
-        <h1 class="tit" id="ARKFUTURE-NET">ARKFUTURE-NET</h1>
+        <h1 class="title">ARKFUTURE-NET</h1>
         <div>
-            <h2 id="ws">资源库及知识库 | Repo</h2>
+            <h2 class="title2" id="repo">资源库及知识库 | Repo</h2>
             <ul>
                 <li><a href="https://github.com/ARKFUTURE">Github</a></li>
                 <li><a href="https://gitea.com/ARKFUTURE">Gitea</a></li>
@@ -53,7 +53,7 @@
         </div>
         <br>
         <div>
-            <h2 id="irc">IRC服务 | IRC</h2>
+            <h2 class="title2" id="irc">IRC服务 | IRC</h2>
             <p>将客户端连接到:<a>irc.arkfuture.test</a></p>
             <p>IRC协议端口为:6667,6668,6669/6697(TLS)</p>
             <p><a href="/arkfuture/html/irc.html">网页客户端</a></p>
@@ -62,7 +62,7 @@
         </div>
         <br>
         <div>
-            <h2>订阅源 | RSS/FEED/ATOM</h2>
+            <h2 class="title2" id="RSS">订阅源 | RSS/FEED/ATOM</h2>
             <ul>
                 <li><a href="/arkfuture/res/news.opml">新闻订阅源 [news.opml]</a></li>
                 <li><a href="/arkfuture/res/cs.opml">网络安全情报订阅源 [cs.opml]</a></li>
@@ -71,7 +71,7 @@
         </div>
         <br>
         <div>
-            <h2>小组件 | Widgets</h2>
+            <h2 class="title2">小组件 | Widgets</h2>
             <ul>
                 <li><a href="/arkfuture/html/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
                 <li><a href="/arkfuture/html/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
@@ -81,7 +81,7 @@
         </div>
         <br>
         <div>
-            <h2>更多服务请加入我们的内部社群</h2>
+            <h2 class="title2">更多服务请加入我们的内部社群</h2>
         </div>
     </div>
 
@@ -89,7 +89,7 @@
     <hr>
 
     <div>
-        <h1 class="tit" id="so">社交 | Social</h1>
+        <h1 class="title" id="so">社交 | Social</h1>
         <ul>
             <li><a href="https://cn.gravatar.com/arkfuturesec">Gravatar(Link Tree)</a></li>
             <li><a href="https://x.com/arkfuturestudio">X</a></li>
@@ -102,7 +102,7 @@
     <hr>
 
     <div>
-        <h1 class="tit" id="li">许可证 | Licenses</h1>
+        <h1 class="title" id="li">许可证 | Licenses</h1>
         <ul>
             <li><a href="https://www.gnu.org/licenses/">GNU开源许可</a></li>
             <li><a href="https://creativecommons.org/licenses/">CC知识许可</a></li>
@@ -116,7 +116,7 @@
     <hr>
 
     <div>
-        <h1 class="tit">结束语 | END</h1>
+        <h1 class="title">结束语 | END</h1>
 
         <p>我们崇尚黑客精神</p>
         <blockquote>
