--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -676,7 +676,7 @@
 		<div class="settings-bar">
 			<div class="settings-group">
 				<label>WebSocket:</label>
-				<input type="text" id="wsUrl" value="" placeholder="wss://irc.example.com:port/">
+				<input type="text" id="wsUrl" value="wss://irc.arkfuture.top:8097" placeholder="wss://irc.example.com:port/">
 			</div>
 			<div class="settings-group">
 				<label>昵称:</label>
