--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <br>
         <div>
             <h2 class="title2" id="irc">IRC服务 | IRC</h2>
-            <p>将客户端连接到:<a>irc.arkfuture.test</a></p>
+            <p>将客户端连接到:<a>irc.arkfuture.top</a></p>
             <p>IRC协议端口为:6667,6668,6669/6697(TLS)</p>
             <p><a href="/arkfuture/html/irc.html">网页客户端</a></p>
             <p>关于IRC相关的知识 您可以了解: https://netsplit.de/ 和 https://www.geekshed.net</p>
