--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -615,8 +615,9 @@
 				flex: 0 0 100px;
 			}
 
-			.log-header {
-				padding: 8px;
+			#input {
+				margin: 8px;
+				padding: 10px;
 			}
 		}
 
@@ -665,8 +666,8 @@
 			font-size: 13px;
 		}
 		
-		/* 图片预览相关样式 */
-		.image-container {
+		/* 媒体预览相关样式 */
+		.media-container {
 			position: relative;
 			display: inline-block;
 			margin: 2px;
@@ -675,7 +676,7 @@
 			box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 		}
 		
-		.image-container img {
+		.media-container img {
 			max-width: 150px;
 			max-height: 150px;
 			object-fit: cover;
@@ -683,7 +684,14 @@
 			border-radius: 4px;
 		}
 		
-		.image-overlay {
+		.media-container video, .media-container audio {
+			max-width: 300px;
+			max-height: 200px;
+			border-radius: 4px;
+			cursor: pointer;
+		}
+		
+		.media-overlay {
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -700,11 +708,11 @@
 			border-radius: 4px;
 		}
 		
-		.image-container:hover .image-overlay {
+		.media-container:hover .media-overlay {
 			opacity: 1;
 		}
 		
-		.image-preview-modal {
+		.media-preview-modal {
 			position: fixed;
 			top: 0;
 			left: 0;
@@ -720,21 +728,35 @@
 			transition: opacity 0.3s;
 		}
 		
-		.image-preview-modal.visible {
+		.media-preview-modal.visible {
 			opacity: 1;
 			pointer-events: all;
 		}
 		
-		.image-preview-content {
+		.media-preview-content {
 			position: relative;
 			max-width: 90%;
 			max-height: 90%;
 		}
 		
-		.image-preview-content img {
+		.media-preview-content img {
 			max-width: 100%;
 			max-height: 80vh;
 			object-fit: contain;
+			border-radius: 4px;
+			box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+		}
+		
+		.media-preview-content video {
+			max-width: 100%;
+			max-height: 80vh;
+			border-radius: 4px;
+			box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+		}
+		
+		.media-preview-content audio {
+			width: 100%;
+			max-width: 800px;
 			border-radius: 4px;
 			box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 		}
@@ -757,11 +779,30 @@
 			justify-content: center;
 		}
 		
-		.image-info {
+		.media-info {
 			text-align: center;
 			color: white;
 			margin-top: 10px;
 			font-size: 14px;
+		}
+		
+		/* 文件图标样式 */
+		.file-icon {
+			display: inline-block;
+			width: 16px;
+			height: 16px;
+			margin-right: 4px;
+			vertical-align: middle;
+		}
+		
+		/* 错误处理样式 */
+		.media-error {
+			display: inline-block;
+			padding: 10px;
+			background: #f8d7da;
+			color: #721c24;
+			border-radius: 4px;
+			font-size: 12px;
 		}
 	</style>
 </head>
@@ -833,12 +874,14 @@
 				   onkeydown="onKeyPress(event)" onkeydown="onKeyDown(event)" />
 		</div>
 		
-		<!-- 图片预览模态框 -->
-		<div class="image-preview-modal" id="imagePreviewModal">
-			<div class="image-preview-content">
-				<img id="previewImage" src="" alt="预览图片">
-				<button class="close-preview" onclick="closeImagePreview()">×</button>
-				<div class="image-info" id="imageInfo"></div>
+		<!-- 媒体预览模态框 -->
+		<div class="media-preview-modal" id="mediaPreviewModal">
+			<div class="media-preview-content">
+				<img id="previewImage" src="" alt="预览图片" style="display: none;">
+				<video id="previewVideo" controls style="display: none;"></video>
+				<audio id="previewAudio" controls style="display: none;"></audio>
+				<button class="close-preview" onclick="closeMediaPreview()">×</button>
+				<div class="media-info" id="mediaInfo"></div>
 			</div>
 		</div>
 	</div>
@@ -1018,7 +1061,7 @@
 		// 显示聊天区域
 		contentsWrapper.classList.remove('hidden');
 		contentsWrapper.classList.add('visible');
-		if (emptyState) emptyState.style.display = 'none';
+		if (emptyState) emptyState.style.display = 'flex';
 		if (input) input.style.display = 'block';
 
 		statusChannel = new Tab_Create("Status", "Status Window", false);
@@ -1328,33 +1371,119 @@
 	function linkify(text) {
 		const urlRegex = /(https?:\/\/[^\s<>{}|\\^`[\]]+)/g;
 		return text.replace(urlRegex, function (url) {
-			// 检查是否是图片URL
-			if (isImageUrl(url)) {
-				return createImagePreview(url);
+			// 验证URL安全性
+			if (!isValidUrl(url)) {
+				return url;
 			}
-			return `<a href="${url}" target="_blank" rel="noopener noreferrer" style="color: var(--clr-accent); text-decoration: underline; word-break: break-all;">${url}</a>`;
+			
+			// 检查媒体类型
+			if (isImageMedia(url)) {
+				return createMediaPreview(url, 'image');
+			} else if (isVideoMedia(url)) {
+				return createMediaPreview(url, 'video');
+			} else if (isAudioMedia(url)) {
+				return createMediaPreview(url, 'audio');
+			}
+			return `<a href="${encodeURI(url)}" target="_blank" rel="noopener noreferrer" style="color: var(--clr-accent); text-decoration: underline; word-break: break-all;">${HTML_escape(url)}</a>`;
 		});
 	}
 
-	function isImageUrl(url) {
+	// 验证URL安全性
+	function isValidUrl(url) {
+		try {
+			const parsedUrl = new URL(url);
+			// 只允许HTTP和HTTPS协议
+			if (parsedUrl.protocol !== 'http:' && parsedUrl.protocol !== 'https:') {
+				return false;
+			}
+			// 阻止内部协议和javascript协议
+			if (url.startsWith('javascript:') || url.startsWith('data:') || url.startsWith('vbscript:')) {
+				return false;
+			}
+			return true;
+		} catch (e) {
+			return false;
+		}
+	}
+
+	function isImageMedia(url) {
 		return /\.(jpeg|jpg|gif|png|webp|bmp|svg)$/i.test(url);
 	}
 
-	function createImagePreview(url) {
-		return `
-			<span class="image-container">
-				<img src="${url}" alt="预览图片" onclick="openImagePreview('${url}')" />
-				<span class="image-overlay">点击放大</span>
-			</span>
-		`;
+	function isVideoMedia(url) {
+		return /\.(mp4|webm|ogg|avi|mov|wmv|flv|mkv)$/i.test(url);
 	}
 
-	function openImagePreview(url) {
-		const modal = document.getElementById('imagePreviewModal');
+	function isAudioMedia(url) {
+		return /\.(mp3|wav|ogg|flac|m4a|aac)$/i.test(url);
+	}
+
+	function createMediaPreview(url, type) {
+		if (type === 'image') {
+			return `
+				<span class="media-container">
+					<img src="${encodeURI(url)}" alt="预览图片" onclick="openMediaPreview('${encodeURI(url)}', 'image')" onerror="handleMediaError(this)" />
+					<span class="media-overlay">点击放大</span>
+				</span>
+			`;
+		} else if (type === 'video') {
+			return `
+				<span class="media-container">
+					<video src="${encodeURI(url)}" controls style="max-width: 300px; max-height: 200px; border-radius: 4px;" onerror="handleMediaError(this)"></video>
+					<span class="media-overlay">点击播放</span>
+				</span>
+			`;
+		} else if (type === 'audio') {
+			return `
+				<span class="media-container">
+					<audio src="${encodeURI(url)}" controls style="width: 300px;" onerror="handleMediaError(this)"></audio>
+				</span>
+			`;
+		}
+		return `<a href="${encodeURI(url)}" target="_blank">${HTML_escape(url)}</a>`;
+	}
+
+	// 处理媒体加载错误
+	function handleMediaError(element) {
+		element.style.display = 'none';
+		const errorDiv = document.createElement('div');
+		errorDiv.className = 'media-error';
+		errorDiv.textContent = '媒体加载失败';
+		element.parentNode.appendChild(errorDiv);
+	}
+
+	function openMediaPreview(url, type) {
+		const modal = document.getElementById('mediaPreviewModal');
 		const img = document.getElementById('previewImage');
-		const info = document.getElementById('imageInfo');
+		const video = document.getElementById('previewVideo');
+		const audio = document.getElementById('previewAudio');
+		const info = document.getElementById('mediaInfo');
 		
-		img.src = url;
+		// 验证URL安全性
+		if (!isValidUrl(url)) {
+			alert('无效的媒体URL');
+			return;
+		}
+		
+		// 隐藏所有媒体元素
+		img.style.display = 'none';
+		video.style.display = 'none';
+		audio.style.display = 'none';
+		
+		// 显示对应类型的媒体元素
+		if (type === 'image') {
+			img.src = encodeURI(url);
+			img.style.display = 'block';
+		} else if (type === 'video') {
+			video.src = encodeURI(url);
+			video.style.display = 'block';
+			video.load();
+		} else if (type === 'audio') {
+			audio.src = encodeURI(url);
+			audio.style.display = 'block';
+			audio.load();
+		}
+		
 		info.textContent = url;
 		
 		// 显示模态框
@@ -1364,8 +1493,21 @@
 		document.body.style.overflow = 'hidden';
 	}
 
-	function closeImagePreview() {
-		const modal = document.getElementById('imagePreviewModal');
+	function closeMediaPreview() {
+		const modal = document.getElementById('mediaPreviewModal');
+		const video = document.getElementById('previewVideo');
+		const audio = document.getElementById('previewAudio');
+		
+		// 停止视频和音频播放并重置src
+		if (video) {
+			video.pause();
+			video.src = '';
+		}
+		if (audio) {
+			audio.pause();
+			audio.src = '';
+		}
+		
 		modal.classList.remove('visible');
 		
 		// 恢复背景滚动
@@ -1373,16 +1515,16 @@
 	}
 
 	// 点击模态框外部关闭
-	document.getElementById('imagePreviewModal').addEventListener('click', function(e) {
+	document.getElementById('mediaPreviewModal').addEventListener('click', function(e) {
 		if (e.target === this) {
-			closeImagePreview();
+			closeMediaPreview();
 		}
 	});
 
 	// 按ESC键关闭
 	document.addEventListener('keydown', function(e) {
 		if (e.key === 'Escape') {
-			closeImagePreview();
+			closeMediaPreview();
 		}
 	});
 
@@ -1829,5 +1971,4 @@
 	}
 </script>
 
-
-
+</html>
