--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -71,9 +71,8 @@
 		}
 
 		.main {
-			display: grid;
-			grid-template-rows: auto auto auto 1fr auto;
-			grid-template-columns: 1fr;
+			display: flex;
+			flex-direction: column;
 			height: 100vh;
 			width: 100%;
 		}
@@ -81,10 +80,10 @@
 		.header {
 			background: linear-gradient(90deg, var(--clr-background2), var(--clr-background));
 			padding: var(--spacing-md) var(--spacing-lg);
+			flex: 0 0 var(--header-height);
 			display: flex;
 			align-items: center;
 			border-bottom: 1px solid var(--clr-border);
-			grid-row: 1;
 		}
 
 		.header h1 {
@@ -95,7 +94,7 @@
 		}
 
 		.settings-bar {
-			grid-row: 2;
+			flex: 0 0 var(--settings-height);
 			background-color: var(--clr-background2);
 			border-bottom: 1px solid var(--clr-border);
 			display: flex;
@@ -279,7 +278,7 @@
 		}
 
 		.chat-container {
-			grid-row: 3 / span 2;
+			flex: 1 1 auto;
 			display: flex;
 			flex-direction: column;
 			overflow: hidden;
@@ -424,19 +423,18 @@
 		}
 
 		.channelcontents {
-			display: grid;
-			grid-template-columns: 1fr auto;
+			display: flex;
+			flex-direction: row;
 			width: 100%;
 			height: 100%;
 			min-height: 0;
 		}
 
 		.channelcontent {
-			grid-column: 1;
+			flex: 1 1 auto;
 			display: none;
-			flex-direction: column;
+			flex-direction: row;
 			min-height: 0;
-			overflow: hidden;
 		}
 
 		.channelcontent.active {
@@ -480,7 +478,6 @@
 		}
 
 		ul {
-			grid-column: 2;
 			flex: 0 0 200px;
 			overflow-y: auto;
 			padding: var(--spacing-sm);
@@ -521,7 +518,6 @@
 		}
 
 		#input {
-			grid-row: 4;
 			flex: 0 0 var(--input-height);
 			padding: var(--spacing-md);
 			background-color: var(--clr-background3);
@@ -884,10 +880,9 @@
 				<h3>欢迎使用 IRC 客户端</h3>
 				<p>请先填写服务器信息并点击连接</p>
 			</div>
+			<input type="text" name="input" id="input" placeholder="输入消息..." style="display: none;"
+				   onkeydown="onKeyPress(event)" onkeydown="onKeyDown(event)" />
 		</div>
-		
-		<input type="text" name="input" id="input" placeholder="输入消息..." style="display: none;"
-			   onkeydown="onKeyPress(event)" onkeydown="onKeyDown(event)" />
 		
 		<!-- 媒体预览模态框 -->
 		<div class="media-preview-modal" id="mediaPreviewModal">
